[b]2.49[/b] (Oct 5, 2020)
*Fixed Datatexts not updating correctly

[b]2.48[/b] (Jul 9, 2020)
*Datatext fix
*Fixed dt backdrop
*Fixed a glitch when no backdrop is selected
*Added Strata and Level options
*Renamed the Datatexts. This will stop breaking old profiles but it may reset their dt assignments
*LibTourist update
*Added Echoes of Ny'alotha

[b]2.47[/b] (Feb 6, 2020)
LibTourist update to 8.3-beta1
Fixed the options to follow the latest ElvUI changes

[b]2.46[/b] (Jan 15, 2020)
Bump toc for patch 8.3
Added 8.3 currencies

[b]2.45[/b]
Fixed broken locales
Update LibTourist
toc update for 8.2.5

[b]2.44[/b]
ToggleConfig has been renamed to ToggleOptionsUI.  Fixes #3. (Credit: Nihilistic)
Update LibTourist

[b]2.43[/b]
Added Prismatic Manapearl in the tokens
Update toc for patch 8.2

[b]2.42[/b]
Update LibTourist for patch 8.1.5

[b]2.41[/b]
Fix CreateShadow

[b]2.40[/b]
*LibTourist update

[b]2.39[/b]
*toc update for patch 8.1
*LibTourist update
*Added patch 8.1 currencies

[b]2.38[/b]
*toc update for patch 8.1

[b]2.37[/b]
*toc update for patch 8.1

[b]2.36[/b]
LibTourist update to v213
Fixed the dungeon entrance coords in the tooltip

[b]2.35[/b]
LibTourist update
Minor fixes

[b]2.34[/b]
Removed an old function that may caused troubles

[b]2.33[/b]
Updated Tokens for BfA and fixed the Professions cap

[b]2.32[/b]
Updated and re enabled LibTourist

[b]2.31[/b]
Disabled LibTourist

[b]2.30[/b]
*Fixed Coords and location
*Disabled tooltip info, till LibTourist gets updated for BfA

[b]2.29[/b]
Added option to hide Coords when entering an instance. They aren't updating anyway. Enabled by default.

[b]2.28[/b]
*Updated libTourist. Contains the new scaled laveling
*Added Wakening Essence
*RightClicking the location panel will open LocationPlus options
*Added support for !ClassColors addon
*Files and functions restruction

[b]2.27[/b]
*LibTourist update

[b]2.26[/b]
*Added Veiled Argunite token
*LibTourist update

[b]2.25[/b]
*toc update for patch 7.3