@@ -131,10 +131,10 @@ end
 -- Location panel
 local function CreateLocationPanel()
 	local db = E.db.locplus
-	local loc_panel = CreateFrame('Frame', 'LocationPlusPanel', E.UIParent)
-	loc_panel:SetWidth(db.lpwidth or 200)
-	loc_panel:SetHeight(db.dtheight or 21)
-	loc_panel:SetPoint('TOP', E.UIParent, 'TOP', 0, -E.mult -22)
+	local loc_panel = CreateFrame('Frame', 'LocationPlusPanel', E.UIParent, 'BackdropTemplate')
+	loc_panel:Width(db.lpwidth or 200)
+	loc_panel:Height(db.dtheight or 21)
+	loc_panel:Point('TOP', E.UIParent, 'TOP', 0, -E.mult -22)
 	loc_panel:SetFrameStrata(db.frameStrata or 'LOW')
 	loc_panel:SetFrameLevel(db.frameLevel or 2)
 	loc_panel:EnableMouse(true)
@@ -144,7 +144,7 @@ local function CreateLocationPanel()
 
 	-- Location Text
 	loc_panel.Text = LocationPlusPanel:CreateFontString(nil, "LOW")
-	loc_panel.Text:SetPoint("CENTER", 0, 0)
+	loc_panel.Text:Point("CENTER", 0, 0)
 	loc_panel.Text:SetAllPoints()
 	loc_panel.Text:SetJustifyH("CENTER")
 	loc_panel.Text:SetJustifyV("MIDDLE")
@@ -200,9 +200,9 @@ local function CreateCoordPanels()
 	local db = E.db.locplus
 
 	-- X Coord panel
-	local coordsX = CreateFrame('Frame', "XCoordsPanel", LocationPlusPanel)
-	coordsX:SetWidth(COORDS_WIDTH)
-	coordsX:SetHeight(db.dtheight)
+	local coordsX = CreateFrame('Frame', "XCoordsPanel", LocationPlusPanel, 'BackdropTemplate')
+	coordsX:Width(COORDS_WIDTH)
+	coordsX:Height(db.dtheight)
 	coordsX:SetFrameStrata('LOW')
 	coordsX.Text = XCoordsPanel:CreateFontString(nil, "LOW")
 	coordsX.Text:SetAllPoints()
@@ -210,9 +210,9 @@ local function CreateCoordPanels()
 	coordsX.Text:SetJustifyV("MIDDLE")
 
 	-- Y Coord panel
-	local coordsY = CreateFrame('Frame', "YCoordsPanel", LocationPlusPanel)
-	coordsY:SetWidth(COORDS_WIDTH)
-	coordsY:SetHeight(db.dtheight)
+	local coordsY = CreateFrame('Frame', "YCoordsPanel", LocationPlusPanel, 'BackdropTemplate')
+	coordsY:Width(COORDS_WIDTH)
+	coordsY:Height(db.dtheight)
 	coordsY:SetFrameStrata('LOW')
 	coordsY.Text = YCoordsPanel:CreateFontString(nil, "LOW")
 	coordsY.Text:SetAllPoints()
@@ -235,24 +235,24 @@ end
 -- datatext panels width
 function LP:DTWidth()
 	local db = E.db.locplus
-	LocPlusLeftDT:SetWidth(db.dtwidth)
-	LocPlusRightDT:SetWidth(db.dtwidth)
+	LocPlusLeftDT:Width(db.dtwidth)
+	LocPlusRightDT:Width(db.dtwidth)
 end
 
 -- all panels height
 function LP:DTHeight()
 	local db = E.db.locplus
 	if db.ht then
-		LocationPlusPanel:SetHeight((db.dtheight)+6)
+		LocationPlusPanel:Height((db.dtheight)+6)
 	else
-		LocationPlusPanel:SetHeight(db.dtheight)
+		LocationPlusPanel:Height(db.dtheight)
 	end
 
-	LocPlusLeftDT:SetHeight(db.dtheight)
-	LocPlusRightDT:SetHeight(db.dtheight)
+	LocPlusLeftDT:Height(db.dtheight)
+	LocPlusRightDT:Height(db.dtheight)
 
-	XCoordsPanel:SetHeight(db.dtheight)
-	YCoordsPanel:SetHeight(db.dtheight)
+	XCoordsPanel:Height(db.dtheight)
+	YCoordsPanel:Height(db.dtheight)
 end
 
 -- Fonts
@@ -292,8 +292,8 @@ end
 -- Show/Hide coord frames
 function LP:HideCoords()
 	local db = E.db.locplus
-	XCoordsPanel:SetPoint('RIGHT', LocationPlusPanel, 'LEFT', -SPACING, 0)
-	YCoordsPanel:SetPoint('LEFT', LocationPlusPanel, 'RIGHT', SPACING, 0)
+	XCoordsPanel:Point('RIGHT', LocationPlusPanel, 'LEFT', -SPACING, 0)
+	YCoordsPanel:Point('LEFT', LocationPlusPanel, 'RIGHT', SPACING, 0)
 
 	LocPlusLeftDT:ClearAllPoints()
 	LocPlusRightDT:ClearAllPoints()
@@ -301,13 +301,13 @@ function LP:HideCoords()
 	if (db.hidecoords) or (db.hidecoordsInInstance and IsInInstance()) then
 		XCoordsPanel:Hide()
 		YCoordsPanel:Hide()
-		LocPlusLeftDT:SetPoint('RIGHT', LocationPlusPanel, 'LEFT', -SPACING, 0)
-		LocPlusRightDT:SetPoint('LEFT', LocationPlusPanel, 'RIGHT', SPACING, 0)
+		LocPlusLeftDT:Point('RIGHT', LocationPlusPanel, 'LEFT', -SPACING, 0)
+		LocPlusRightDT:Point('LEFT', LocationPlusPanel, 'RIGHT', SPACING, 0)
 	else
 		XCoordsPanel:Show()
 		YCoordsPanel:Show()
-		LocPlusLeftDT:SetPoint('RIGHT', XCoordsPanel, 'LEFT', -SPACING, 0)
-		LocPlusRightDT:SetPoint('LEFT', YCoordsPanel, 'RIGHT', SPACING, 0)
+		LocPlusLeftDT:Point('RIGHT', XCoordsPanel, 'LEFT', -SPACING, 0)
+		LocPlusRightDT:Point('LEFT', YCoordsPanel, 'RIGHT', SPACING, 0)
 	end
 end
 
@@ -323,9 +323,11 @@ function LP:TransparentPanels()
 		elseif db.trans then
 			frame:SetTemplate('Transparent')
 		else
-			frame:SetTemplate('Default', true)
+			frame:SetTemplate('Default')
 		end
 	end
+	_G.LocPlusLeftDT.ignoreBorderColors = nil
+	_G.LocPlusRightDT.ignoreBorderColors = nil
 end
 
 function LP:StrataAndLevel()
@@ -389,16 +391,16 @@ function LP:UpdateLocation()
 	local autowidth = (LocationPlusPanel.Text:GetStringWidth() + 18)
 
 	if db.lpauto then
-		LocationPlusPanel:SetWidth(autowidth)
-		LocationPlusPanel.Text:SetWidth(autowidth)
+		LocationPlusPanel:Width(autowidth)
+		LocationPlusPanel.Text:Width(autowidth)
 	else
-		LocationPlusPanel:SetWidth(fixedwidth)
+		LocationPlusPanel:Width(fixedwidth)
 		if db.trunc then
-			LocationPlusPanel.Text:SetWidth(fixedwidth - 18)
+			LocationPlusPanel.Text:Width(fixedwidth - 18)
 			LocationPlusPanel.Text:SetWordWrap(false)
 		elseif autowidth > fixedwidth then
-			LocationPlusPanel:SetWidth(autowidth)
-			LocationPlusPanel.Text:SetWidth(autowidth)
+			LocationPlusPanel:Width(autowidth)
+			LocationPlusPanel.Text:Width(autowidth)
 		end
 	end
 end
@@ -431,11 +433,11 @@ end
 -- Coord panels width
 function LP:CoordsDigit()
 	if E.db.locplus.dig then
-		XCoordsPanel:SetWidth(COORDS_WIDTH*1.5)
-		YCoordsPanel:SetWidth(COORDS_WIDTH*1.5)
+		XCoordsPanel:Width(COORDS_WIDTH*1.5)
+		YCoordsPanel:Width(COORDS_WIDTH*1.5)
 	else
-		XCoordsPanel:SetWidth(COORDS_WIDTH)
-		YCoordsPanel:SetWidth(COORDS_WIDTH)
+		XCoordsPanel:Width(COORDS_WIDTH)
+		YCoordsPanel:Width(COORDS_WIDTH)
 	end
 end
 
@@ -457,9 +459,9 @@ end
 local function CreateDatatextPanels()
 	local db = E.db.locplus
 	-- Left coords Datatext panel
-	local left_dtp = CreateFrame('Frame', 'LocPlusLeftDT', E.UIParent)
-	left_dtp:SetWidth(db.dtwidth)
-	left_dtp:SetHeight(db.dtheight)
+	local left_dtp = CreateFrame('Frame', 'LocPlusLeftDT', E.UIParent, 'BackdropTemplate')
+	left_dtp:Width(db.dtwidth)
+	left_dtp:Height(db.dtheight)
 	left_dtp:SetFrameStrata('LOW')
 	left_dtp:SetParent(LocationPlusPanel)
 
@@ -467,9 +469,9 @@ local function CreateDatatextPanels()
 	DT:UpdatePanelInfo('LocPlusLeftDT')
 
 	-- Right coords Datatext panel
-	local right_dtp = CreateFrame('Frame', 'LocPlusRightDT', E.UIParent)
-	right_dtp:SetWidth(db.dtwidth)
-	right_dtp:SetHeight(db.dtheight)
+	local right_dtp = CreateFrame('Frame', 'LocPlusRightDT', E.UIParent, 'BackdropTemplate')
+	right_dtp:Width(db.dtwidth)
+	right_dtp:Height(db.dtheight)
 	right_dtp:SetFrameStrata('LOW')
 	right_dtp:SetParent(LocationPlusPanel)
 
@@ -521,6 +523,7 @@ function LP:PLAYER_ENTERING_WORLD(...)
 	self:ChangeFont()
 	self:UpdateCoords()
 	self:HideCoords()
+	self:TransparentPanels()
 	DT:UpdatePanelInfo('LocPlusRightDT')
 	DT:UpdatePanelInfo('LocPlusLeftDT')
 end
